--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
                 "DELETE"
             ],
             "headers": {
-          "Access-Control-Allow-Origin": "*", 
+          "Access-Control-Allow-Origin": "https://morty-lock-d2-tso-csprint-flax.vercel.app",
           "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
           "Access-Control-Allow-Headers": "Content-Type, Authorization",
           "Access-Control-Allow-Credentials": "true"
