--- a/vercel.json
+++ b/vercel.json
@@ -17,18 +17,13 @@
         {
             "src": "/(.*)",
             "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ],
-            "headers": {
-          "Access-Control-Allow-Origin": "https://morty-lock-d2-tso-csprint-flax.vercel.app",
-          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
-        }
+            "methods": ["GET", "POST", "PUT", "DELETE"],
+            "headers": [
+              { "key": "Access-Control-Allow-Origin", "value": "https://morty-lock-d2-tso-csprint-flax.vercel.app" },
+              { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+              { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+              { "key": "Access-Control-Allow-Credentials", "value": "true" }
+            ]
+          }
     ]
 }
